Update patchyProtein trajectory

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -29,7 +29,8 @@
    "source": [
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
-    "parentDirectory = '../data/pentamer/dimer/'\n",
+    "#parentDirectory = '../data/pentamer/dimer/'\n",
+    "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading continuous trajectories from files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -50,7 +51,8 @@
     "# Calculated parameters\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "effectivetimeSteps = int(totalTimeSteps/stride)\n",
-    "fnamebase = parentDirectory + 'simDimer_'"
+    "#fnamebase = parentDirectory + 'simDimer_'\n",
+    "fnamebase = parentDirectory + 'simPatchyProtein_'"
    ]
   },
   {
@@ -65,7 +67,8 @@
     "\n",
     "# Set trajectory discretizator\n",
     "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
-    "discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
+    "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
+    "discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
     "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
