--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
-    "parentDirectory = '../data/pentamer/dimer/'\n",
+    "#parentDirectory = '../data/pentamer/dimer/'\n",
+    "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -42,13 +43,13 @@
    "source": [
     "# Calculated parameters\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
-    "fnamebase = parentDirectory + 'simDimer_'\n",
+    "#fnamebase = parentDirectory + 'simDimer_'\n",
+    "fnamebase = parentDirectory + 'simPatchyProtein_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 150\n",
     "reversible = True #False\n",
-    "stitching = True\n",
-    "fullDictionary = False # Only rates to and from bound states."
+    "stitching = True"
    ]
   },
   {
@@ -107,8 +108,10 @@
     "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
-    "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "#pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -202,7 +205,8 @@
     "plt.yticks(fontsize = 28)\n",
     "plt.ylim([10.0,100000])\n",
     "#plt.savefig('its_dimer_strength60_final_alt.pdf')\n",
-    "#plt.savefig('its_pentamer_strength80_test.pdf')"
+    "#plt.savefig('its_pentamer_strength80_test.pdf')\n",
+    "#plt.savefig('its_patchyProteinTest.pdf')"
    ]
   },
   {
