Refactore of trajectories to improve functionality

--- a/examples/benchmark/generatePatchyDimerFPTsBenchmark.ipynb
+++ b/examples/benchmark/generatePatchyDimerFPTsBenchmark.ipynb
@@ -161,7 +161,7 @@
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
-    "        boundState = traj.getState(partlist[0], partlist[1])\n",
+    "        boundState = traj.sampleDiscreteState2(partlist[0], partlist[1])\n",
     "        if boundState in outputBoundStates:\n",
     "        #if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            print(integrator.clock, boundState)\n",
