--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -28,7 +28,7 @@
     "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = parameterDictionary['numFiles']\n",
+    "nfiles = 50 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
