--- a/examples/testReadH5.ipynb
+++ b/examples/testReadH5.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "# Load H5 file into python\n",
     "filename = '../data/dimer/simDimer_t4.00E+06_s25_0000.h5'\n",
+    "filename = '../data/patchyProtein/benchmark/simPatchyProtein_0099.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -56,6 +57,15 @@
    "outputs": [],
    "source": [
     "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[5]"
    ]
   },
   {
