Added offset to spherePartition

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -25,10 +25,10 @@
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
-    "parentDirectory = '../data/patchyProtein/benchmark/'\n",
+    "parentDirectory = '../data/patchyProtein/benchmark_stridex2/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = 50 #parameterDictionary['numFiles']\n",
+    "nfiles = 600 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -48,7 +48,7 @@
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 150\n",
-    "reversible = True #False\n",
+    "reversible = False #True #False\n",
     "stitching = True"
    ]
   },
@@ -110,8 +110,8 @@
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "#pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
-    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 300\n",
+    "maxlagtime = 300 #300\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
     "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
@@ -238,7 +238,7 @@
     "eig0 = mainmsm.eigenvectors_left()[0]\n",
     "print(np.where(np.abs(eig0)>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,10])"
+    "#plt.xlim([0,10])"
    ]
   },
   {
