Corrected offset bug in spherePartition

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -25,10 +25,10 @@
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
-    "parentDirectory = '../data/patchyProtein/benchmark_stridex2/'\n",
+    "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = 600 #parameterDictionary['numFiles']\n",
+    "nfiles = parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -48,7 +48,7 @@
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 150\n",
-    "reversible = False #True #False\n",
+    "reversible = True #False\n",
     "stitching = True"
    ]
   },
