Removed const from potentials functions

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -612,6 +612,7 @@
     "ax.set_yscale('log')\n",
     "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
     "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{on}$)', fontsize = fsize+6)\n",
+    "ax.set_yticks([0.001,.01])\n",
     "#ax.set_ylim([0,0.12])\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
     "plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
