--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -28,7 +28,7 @@
     "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = parameterDictionary['numFiles']\n",
+    "nfiles = 400 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -46,7 +46,8 @@
     "#fnamebase = parentDirectory + 'simDimer_'\n",
     "fnamebase = parentDirectory + 'simPatchyProtein_'\n",
     "# Parameters for MSM generation \n",
-    "numBoundStates = 8\n",
+    "#numBoundStates = 8\n",
+    "numBoundStates = 6\n",
     "lagtime = 150\n",
     "reversible = True #False\n",
     "stitching = True"
