Added FPT patchyProtein script

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -22,6 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
@@ -62,7 +71,7 @@
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
     "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
-    "filetype = 'xyz' #'xyz' # 'h5'\n",
+    "filetype = 'h5'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
     "    dtrajs.append(dtraj)    \n",
