--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -22,22 +22,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
     "parentDirectory = '../data/patchyProtein/benchmark/'\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = 400 #parameterDictionary['numFiles']\n",
+    "nfiles = parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -57,7 +48,7 @@
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 150\n",
+    "lagtime = 50 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -71,7 +62,7 @@
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
     "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
-    "filetype = 'h5'\n",
+    "filetype = 'xyz' # 'h5' or 'xyz'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
     "    dtrajs.append(dtraj)    \n",
@@ -165,7 +156,7 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 300 #300\n",
+    "maxlagtime = 100 #300\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
     "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
