Added notebook implementation tests

--- a/examples/tests/classSimulation.ipynb
+++ b/examples/tests/classSimulation.ipynb
@@ -76,7 +76,7 @@
     "timesteps = 5000\n",
     "bufferSize = 1024\n",
     "stride = 10\n",
-    "filename = \"../data/simTestH5\" #Note the folder where the data is saved should already exist, e.g. ../data/ \n",
+    "filename = \"../../data/simTestH5\" #Note the folder where the data is saved should already exist, e.g. ../data/ \n",
     "outTxt = False\n",
     "outH5 = True\n",
     "outChunked = True\n",
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../data/simTestH5.h5'\n",
+    "filename = '../../data/simTestH5.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
