--- a/examples/tests/readH5.ipynb
+++ b/examples/tests/readH5.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../data/dimer/simDimer_t4.00E+06_s25_0000.h5'\n",
-    "#filename = '../data/patchyProtein/benchmark/simPatchyProtein_0099.h5'\n",
+    "filename = '../../data/dimer/simDimer_t4.00E+06_s25_0000.h5'\n",
+    "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0099.h5'\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
