--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -66,9 +66,11 @@
     "bufferSize = effectivetimeSteps\n",
     "\n",
     "# Set trajectory discretizator\n",
+    "radialLowerBound = 1.25\n",
+    "radialUpperBound = 2.25\n",
     "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
-    "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
-    "discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, 1.25, 2.25)\n",
+    "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
+    "discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
     "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
