--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -48,7 +48,7 @@
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 50 #75 150\n",
+    "lagtime = 100 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -111,10 +111,10 @@
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
-    "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle.dump(MSM, pickle_out)\n",
-    "pickle_out.close()"
+    "#pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "#pickle.dump(MSM, pickle_out)\n",
+    "#pickle_out.close()"
    ]
   },
   {
