--- a/examples/models/odLangevinMarkovSwitch.ipynb
+++ b/examples/models/odLangevinMarkovSwitch.ipynb
@@ -86,9 +86,9 @@
     "# For a list of particles\n",
     "pairInteractions = False\n",
     "position2 = np.array([2,2,2])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)\n",
-    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, position2, orientation)\n",
-    "partlist = msmrd2.integrators.particleMSList([part1,part2])\n",
+    "part1 = msmrd2.particle(ptype, pstate, D, Drot, position, orientation)\n",
+    "part2 = msmrd2.particle(ptype, pstate, D, Drot, position2, orientation)\n",
+    "partlist = msmrd2.integrators.particleList([part1,part2])\n",
     "# Integrate particle list and print only positions (with integratelist)\n",
     "t = 0\n",
     "timesteps = 50\n",
