--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -25,7 +25,6 @@
     "boxsize = 6 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "numTrajectories = 1000\n",
     "lagtime = 75\n",
     "rootDirectory = '../../data/patchyProtein/first_passage_times/'"
    ]
@@ -78,8 +77,8 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
-    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
+    "numTrajs = 1000\n",
+    "filename = rootDirectory + 'testMSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "with open(filename) as file:\n",
@@ -167,13 +166,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## UP UNTIL HERE MODIFICATIONS FOR PATCHY PROTEINS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load bound to unbound FPT data (bechmark and MSMRD)"
    ]
   },
@@ -184,25 +176,17 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 10000\n",
-    "filenameA = rootDirectory + 'patchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'patchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "fptsA2unbound = []\n",
-    "fptsB2unbound = []\n",
-    "with open(filenameA) as file:\n",
+    "numTrajs = 5000\n",
+    "filename = rootDirectory + 'patchyProteinFPTs_2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "fpts2unbound = []\n",
+    "with open(filename) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
-    "        fptsA2unbound.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsB2unbound.append(time)\n",
+    "        fpts2unbound.append(time)\n",
     "        \n",
     "# Normalizing weights\n",
-    "weightsA2 = np.ones_like(fptsA2unbound)/float(len(fptsA2unbound))\n",
-    "weightsB2 = np.ones_like(fptsB2unbound)/float(len(fptsB2unbound))"
+    "weights2 = np.ones_like(fpts2unbound)/float(len(fpts2unbound))"
    ]
   },
   {
@@ -212,27 +196,18 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 10000\n",
-    "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2unbound_trajs' + \\\n",
+    "numTrajs = 5000\n",
+    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2unbound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2unbound_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA2unbound = []\n",
-    "MSMRDfptsB2unbound = []\n",
-    "with open(filenameA) as file:\n",
+    "MSMRDfpts2unbound = []\n",
+    "with open(filename) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
-    "        MSMRDfptsA2unbound.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsB2unbound.append(time)\n",
+    "        MSMRDfpts2unbound.append(time)\n",
     "        \n",
     "# Normalizing weights\n",
-    "weightsAMSMRD2 = np.ones_like(MSMRDfptsA2unbound)/float(len(MSMRDfptsA2unbound))\n",
-    "weightsBMSMRD2 = np.ones_like(MSMRDfptsB2unbound)/float(len(MSMRDfptsB2unbound))"
+    "weightsMSMRD2 = np.ones_like(MSMRDfpts2unbound)/float(len(MSMRDfpts2unbound))"
    ]
   },
   {
@@ -250,37 +225,20 @@
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
     "numBootsrapSamples = 2000\n",
-    "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrapping(fptsA2unbound, numBootsrapSamples)\n",
-    "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrapping(fptsB2unbound, numBootsrapSamples)\n",
-    "print(\"Raw MFPTs (A and B): \", np.array(fptsA2unbound).mean(), np.array(fptsB2unbound).mean() )\n",
-    "print(\"Bootstrapping mean and std (A): \", mfptA2unbound, fptA2unboundstd)\n",
-    "print(\"Bootstrapping mean and std (B): \", mfptB2unbound, fptB2unboundstd)\n",
-    "MSMRDmfptA2unbound, MSMRDfptA2unboundstd = analysisTools.bootstrapping(MSMRDfptsA2unbound, numBootsrapSamples)\n",
-    "MSMRDmfptB2unbound, MSMRDfptB2unboundstd = analysisTools.bootstrapping(MSMRDfptsB2unbound, numBootsrapSamples)\n",
-    "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA2unbound).mean(), np.array(MSMRDfptsB2unbound).mean())\n",
-    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2unbound, MSMRDfptA2unboundstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2unbound, MSMRDfptB2unboundstd)\n",
-    "if calculateRates:\n",
-    "    mkoffA = 1.0/mfptA2unbound\n",
-    "    mkoffB = 1.0/mfptB2unbound\n",
-    "    mkoffAMSMRD = 1.0/MSMRDmfptA2unbound\n",
-    "    mkoffBMSMRD = 1.0/MSMRDmfptB2unbound\n",
-    "    koffAstd = fptA2unboundstd/(mfptA2unbound*mfptA2unbound)\n",
-    "    koffBstd = fptB2unboundstd/(mfptB2unbound*mfptB2unbound)\n",
-    "    koffAstdMSMRD = MSMRDfptA2unboundstd/(MSMRDmfptA2unbound*MSMRDmfptA2unbound)\n",
-    "    koffBstdMSMRD = MSMRDfptB2unboundstd/(MSMRDmfptB2unbound*MSMRDmfptB2unbound)\n",
-    "    # Calculate averages \n",
-    "    meanKoff = (mkoffA + mkoffB)/2.0\n",
-    "    koffstd = (koffAstd + koffBstd)/2.0\n",
-    "    meanKoffMSMRD = (mkoffAMSMRD + mkoffBMSMRD)/2.0\n",
-    "    koffstdMSMRD = (koffAstdMSMRD + koffBstdMSMRD)/2.0\n",
-    "    print(\"Off rates:\")\n",
-    "    print(\"Bootstrapping mean and std (A):\", mkoffA, koffAstd)\n",
-    "    print(\"Bootstrapping mean and std (B):\", mkoffB, koffBstd)\n",
-    "    print(\"Bootstrapping mean and std (Average):\", meanKoff, koffstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (A):\", mkoffAMSMRD, koffAstdMSMRD)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (B):\", mkoffBMSMRD, koffBstdMSMRD)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (Average):\", meanKoffMSMRD, koffstdMSMRD)"
+    "mfpt2unbound, fpt2unboundstd = analysisTools.bootstrapping(fpts2unbound, numBootsrapSamples)\n",
+    "print(\"Raw MFPT: \", np.array(fpts2unbound).mean())\n",
+    "print(\"Bootstrapping mean and std: \", mfpt2unbound, fpt2unboundstd)\n",
+    "MSMRDmfpt2unbound, MSMRDfpt2unboundstd = analysisTools.bootstrapping(MSMRDfpts2unbound, numBootsrapSamples)\n",
+    "print(\"Raw MSMRD MFPT: \",np.array(MSMRDfpts2unbound).mean())\n",
+    "print(\"MSMRD bootstrapping mean and std: \", MSMRDmfpt2unbound, MSMRDfpt2unboundstd)\n",
+    "# Calculate rates\n",
+    "mkoff = 1.0/mfpt2unbound\n",
+    "mkoffMSMRD = 1.0/MSMRDmfpt2unbound\n",
+    "koffstd = fpt2unboundstd/(mfpt2unbound*mfpt2unbound)\n",
+    "koffstdMSMRD = MSMRDfpt2unboundstd/(MSMRDmfpt2unbound*MSMRDmfpt2unbound)\n",
+    "print(\"Off rates:\")\n",
+    "print(\"Bootstrapping mean and std:\", mkoff, koffstd)\n",
+    "print(\"Bootstrapping MSMRD mean and std:\", mkoffMSMRD, koffstdMSMRD)"
    ]
   },
   {
@@ -291,12 +249,12 @@
    "source": [
     "# PLOT FOR PAPER #\n",
     "# Configure figure\n",
-    "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(6,5))\n",
+    "fig, ax1 = plt.subplots(nrows=1, figsize=(6,5))\n",
     "fig.subplots_adjust(hspace=0)\n",
     "fsize = 16\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
-    "hbins = np.arange(0, 6, 0.2)\n",
+    "hbins = np.arange(0, 15, 0.5)\n",
     "\n",
     "# Set outer common axes titles\n",
     "ax0 = fig.add_subplot(111, frameon=False)\n",
@@ -306,37 +264,29 @@
     "ax0.set_yticks([0])\n",
     "\n",
     "# Plot A to unbound histogram\n",
-    "ax1.hist(fptsA2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsA2);\n",
-    "ax1.hist(fptsA2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsA2, label = r'$\\mathrm{Benchmark}$');\n",
-    "ax1.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsAMSMRD2);\n",
-    "ax1.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsAMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax1.legend(fontsize=fsize, title=r'$A \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(1.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2unbound, fptA2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(1.45, 0.097, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2unbound, MSMRDfptA2unboundstd), \n",
+    "ax1.hist(fpts2unbound, bins = hbins, alpha=a1, color=c1, weights = weights2);\n",
+    "ax1.hist(fpts2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weights2, label = r'$\\mathrm{Benchmark}$');\n",
+    "ax1.hist(MSMRDfpts2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsMSMRD2);\n",
+    "ax1.hist(MSMRDfpts2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
+    "ax1.legend(fontsize=fsize, title=r'$ \\mathrm{Bound} \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
+    "ax1.text(1.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt2unbound, fpt2unboundstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(1.45, 0.097, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt2unbound, MSMRDfpt2unboundstd), \n",
     "         fontsize=fsize, color=c2)\n",
-    "ax1.set_xlim([0,6])\n",
+    "ax1.set_xlim([0,15])\n",
     "ax1.set_ylim([0,0.15])\n",
     "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
     "\n",
     "\n",
-    "# Plot B to unbound histogram\n",
-    "ax2.hist(fptsB2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsB2);\n",
-    "ax2.hist(fptsB2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsB2, label =r'$\\mathrm{Benchmark}$');\n",
-    "ax2.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsBMSMRD2);\n",
-    "ax2.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
-    "         facecolor='None', weights = weightsBMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax2.legend(fontsize=fsize, title=r'$B \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(1.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2unbound, fptB2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax2.text(1.45, 0.097, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2unbound, MSMRDfptB2unboundstd), \n",
-    "         fontsize=fsize, color=c2)\n",
-    "ax2.set_xlim([0,6])\n",
-    "ax2.set_ylim([0,0.15])\n",
-    "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
-    "\n",
     "#plt.savefig('toUnbound_FPTs.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UP UNTIL HERE MODIFICATIONS FOR PATCHY PROTEINS"
    ]
   },
   {
