Fixed bug in msmrdIntegrator and minor changes

--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -255,6 +255,7 @@
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "hbins = np.arange(0, 15, 0.5)\n",
+    "#hbins = np.arange(0, 20, 0.66666666)\n",
     "\n",
     "# Set outer common axes titles\n",
     "ax0 = fig.add_subplot(111, frameon=False)\n",
