--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -70,7 +70,8 @@
     "radialUpperBound = 2.25\n",
     "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
     "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
-    "discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
+    "#discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
+    "discretizator = msmrd2.trajectories.patchyProtein2(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
     "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
@@ -109,7 +110,7 @@
    "source": [
     "# Write discrete trajectory to xyz file\n",
     "for i, dtraj in enumerate(dtrajs):\n",
-    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete.xyz', 'w')\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_large.xyz', 'w')\n",
     "    for j in range(len(dtraj)):\n",
     "        datafile.write(str(dtraj[j]) + '\\n')\n",
     "    datafile.close()\n",
