--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -48,7 +48,7 @@
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 150 #75 150\n",
+    "lagtime = 50 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -61,7 +61,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete_large' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' # 'h5' or 'xyz'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -111,7 +111,7 @@
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_2states_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
