WORKING PATCHY PROTEIN...
updated scripts

--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -25,7 +25,7 @@
     "boxsize = 6 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "lagtime = 50\n",
+    "lagtime = 75\n",
     "rootDirectory = '../../data/patchyProtein/first_passage_times/'"
    ]
   },
@@ -77,8 +77,8 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
-    "filename = rootDirectory + 'testMSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
+    "numTrajs = 1000\n",
+    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "with open(filename) as file:\n",
@@ -157,7 +157,7 @@
     "ax1.text(85, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
     "ax1.set_xlim([0,1000])\n",
-    "ax1.set_ylim([0,0.18])\n",
+    "#ax1.set_ylim([0,0.18])\n",
     "\n",
     "#plt.savefig('toBound_FPTs.pdf', bbox_inches='tight')"
    ]
@@ -198,7 +198,7 @@
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
     "numTrajs = 5000\n",
-    "filename = rootDirectory + 'testMSMRDpatchyProteinFPTs_2unbound_trajs' + \\\n",
+    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2unbound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts2unbound = []\n",
     "with open(filename) as file:\n",
