--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Calculated parameters\n",
-    "dtEffective = dt*stride # needed to obtain rate dictionary\n",
+    "#dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "effectivetimeSteps = int(totalTimeSteps/stride)\n",
     "#fnamebase = parentDirectory + 'simDimer_'\n",
     "fnamebase = parentDirectory + 'simPatchyProtein_'"
@@ -68,10 +68,10 @@
     "# Set trajectory discretizator\n",
     "radialLowerBound = 1.25\n",
     "radialUpperBound = 2.25\n",
-    "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
-    "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
-    "#discretizator = msmrd2.trajectories.patchyProtein(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
-    "discretizator = msmrd2.trajectories.patchyProtein2(numParticles, effectivetimeSteps, radialLowerBound, radialUpperBound)\n",
+    "#discretizator = msmrd2.trajectories.patchyDimer(numParticles, bufferSize)\n",
+    "#discretizator = msmrd2.trajectories.patchyDimer2(numParticles, bufferSize, radialLowerBound, radialUpperBound)\n",
+    "discretizator = msmrd2.trajectories.patchyProtein(numParticles, bufferSize, radialLowerBound, radialUpperBound)\n",
+    "#discretizator = msmrd2.trajectories.patchyProtein2(numParticles, bufferSize, radialLowerBound, radialUpperBound)\n",
     "\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
@@ -110,7 +110,7 @@
    "source": [
     "# Write discrete trajectory to xyz file\n",
     "for i, dtraj in enumerate(dtrajs):\n",
-    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_large.xyz', 'w')\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete.xyz', 'w')\n",
     "    for j in range(len(dtraj)):\n",
     "        datafile.write(str(dtraj[j]) + '\\n')\n",
     "    datafile.close()\n",
@@ -176,7 +176,7 @@
    "source": [
     "# Write discrete trajectory to xyz file\n",
     "for i, dtraj in enumerate(dtrajs):\n",
-    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python.xyz', 'w')\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python_debug_test.xyz', 'w')\n",
     "    for j in range(len(dtraj)):\n",
     "        datafile.write(str(dtraj[j]) + '\\n')\n",
     "    datafile.close()\n",
