--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -26,6 +26,7 @@
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
     "parentDirectory = '../data/patchyProtein/benchmark/'\n",
+    "\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
     "nfiles = parameterDictionary['numFiles']\n",
@@ -45,10 +46,11 @@
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "#fnamebase = parentDirectory + 'simDimer_'\n",
     "fnamebase = parentDirectory + 'simPatchyProtein_'\n",
+    "\n",
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 50 #75 150\n",
+    "lagtime = 75 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -61,7 +63,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete_large' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' # 'h5' or 'xyz'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -109,10 +111,16 @@
     "MSM = {'transition_matrix' : mainmsm.transition_matrix, 'active_set': mainmsm.active_set}\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "\n",
     "#pickle_out = open(\"../data/pickled_data/MSM_pentamer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
-    "pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_2states_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "\n",
+    "#pickle_out = open(\"../data/pickled_data/MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
+    "#\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "\n",
+    "pickle_out = open(parentDirectory + \"MSM_patchyProtein_t\" + \"{:.2E}\".format(totalTimeSteps ) + \n",
     "\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "\n",
     "pickle.dump(MSM, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -156,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 100 #300\n",
+    "maxlagtime = 200 #100 #200 #300\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
     "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
@@ -204,7 +212,7 @@
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
-    "plt.ylim([10.0,100000])\n",
+    "#plt.ylim([10.0,100000])\n",
     "#plt.savefig('its_dimer_strength60_final_alt.pdf')\n",
     "#plt.savefig('its_pentamer_strength80_test.pdf')\n",
     "#plt.savefig('its_patchyProteinTest.pdf')"
@@ -225,7 +233,7 @@
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n",
     "plt.xticks(fontsize = 28)\n",
     "plt.yticks(fontsize = 28)\n",
-    "plt.ylim([10.0,40000])\n",
+    "#plt.ylim([10.0,4500])\n",
     "#plt.savefig('its_nolog_dimer_strength60_final_alt.pdf')\n",
     "#plt.savefig('its_nolog_pentamer_strength80_test.pdf')"
    ]
@@ -236,10 +244,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig0 = mainmsm.eigenvectors_left()[0]\n",
+    "eig0 = mainmsm.eigenvectors_left()[2]\n",
     "print(np.where(np.abs(eig0)>0.1))\n",
     "plt.plot(eig0)\n",
-    "#plt.xlim([0,10])"
+    "plt.xlim([0,10])"
    ]
   },
   {
