--- a/examples/tests/readH5.ipynb
+++ b/examples/tests/readH5.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import h5py\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "np.set_printoptions(threshold=np.inf)"
    ]
   },
   {
@@ -17,8 +18,10 @@
    "outputs": [],
    "source": [
     "# Load H5 file into python\n",
-    "filename = '../../data/dimer/simDimer_t4.00E+06_s25_0000.h5'\n",
-    "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0099.h5'\n",
+    "#filename = '../../data/dimer/60strength/simDimer_0000_discrete_debug_test.h5'\n",
+    "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0018.h5'\n",
+    "filename = '../../data/testPatchyProtein/benchmark/simPatchyProtein_0076_discrete.h5'\n",
+    "\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
     "# List all groups (use the firs key)\n",
@@ -39,6 +42,16 @@
    "outputs": [],
    "source": [
     "a = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(200):\n",
+    "    print(i, a[a==i].size)"
    ]
   },
   {
@@ -111,6 +124,31 @@
    "outputs": [],
    "source": [
     "read_data0[3]==read_data1[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load nonH5 trajectory\n",
+    "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "filetype = 'xyz' # 'h5' or 'xyz'\n",
+    "filenumber = 0\n",
+    "fnamesuffix = '_discrete'\n",
+    "filename = '../../data/patchyProtein/benchmark/simPatchyProtein_'\n",
+    "dtraj = trajectoryTools.loadDiscreteTrajectory(filename, filenumber, fnamesuffix, filetype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(200):\n",
+    "    print(i, dtraj[dtraj==i].size)"
    ]
   },
   {
