Updated scripts to include potential in MSMRD

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -50,7 +50,7 @@
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 75 #75 150\n",
+    "lagtime = 150 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -244,10 +244,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig0 = mainmsm.eigenvectors_left()[2]\n",
+    "eig0 = mainmsm.eigenvectors_left()[0]\n",
     "print(np.where(np.abs(eig0)>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,10])"
+    "#plt.xlim([0,10])"
    ]
   },
   {
