--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -100,6 +100,7 @@
     "# Define Patchy Protein potential\n",
     "sigma = 1.0\n",
     "strength = 65\n",
+    "angularStrength = 2 \n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
@@ -109,7 +110,8 @@
     "                       np.array([0.,0.,-1.])]\n",
     "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
     "# Defines patchy protein potential\n",
-    "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "potentialPatchyProteinMS = patchyProteinMarkovSwitch(sigma, strength, angularStrength, \n",
+    "                                                     patchesCoordinates1, patchesCoordinates2)\n",
     "# Incorporate potential into integrator\n",
     "integrator.setPairPotential(potentialPatchyProteinMS)"
    ]
