Minor changes, working MSMRD w/switch version

--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -25,11 +25,11 @@
     "# Load parameters from parameters file\n",
     "#parentDirectory = '../data/dimer/60strength/'\n",
     "#parentDirectory = '../data/pentamer/dimer/'\n",
-    "parentDirectory = '../data/patchyProtein/benchmark/'\n",
+    "parentDirectory = '../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/'\n",
     "\n",
     "parameterDictionary = analysisTools.readParameters(parentDirectory + \"parameters\")\n",
     "# Parameters for loading files (from original simulation)\n",
-    "nfiles = parameterDictionary['numFiles']\n",
+    "nfiles = 400 #parameterDictionary['numFiles']\n",
     "dt = parameterDictionary['dt'] \n",
     "stride = parameterDictionary['stride']\n",
     "totalTimeSteps = parameterDictionary['timesteps'] \n",
@@ -50,7 +50,7 @@
     "# Parameters for MSM generation \n",
     "#numBoundStates = 8\n",
     "numBoundStates = 6\n",
-    "lagtime = 150 #75 150\n",
+    "lagtime = 75 #75 150\n",
     "reversible = True #False\n",
     "stitching = True"
    ]
@@ -63,7 +63,7 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
+    "fnamesuffix = '_discrete2states' #'_discrete_test' #'_discrete_python' # '_discrete'\n",
     "filetype = 'xyz' # 'h5' or 'xyz'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Calculate implied time scales\n",
-    "maxlagtime = 200 #100 #200 #300\n",
+    "maxlagtime = 300 #100 #200 #300\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "# with error bars\n",
     "#its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible, errors='bayes')"
