--- a/examples/tests/readH5.ipynb
+++ b/examples/tests/readH5.ipynb
@@ -20,7 +20,8 @@
     "# Load H5 file into python\n",
     "#filename = '../../data/dimer/60strength/simDimer_0000_discrete_debug_test.h5'\n",
     "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0018.h5'\n",
-    "filename = '../../data/testPatchyProtein/benchmark/simPatchyProtein_0076_discrete.h5'\n",
+    "#filename = '../../data/testPatchyProtein/benchmark/simPatchyProtein_0076_discrete.h5'\n",
+    "filename = '../../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/simPatchyProtein_0078.h5'\n",
     "\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
@@ -79,6 +80,15 @@
    "outputs": [],
    "source": [
     "a[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0:100]"
    ]
   },
   {
