Final working patchyProteinMS scripts

--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -25,8 +25,9 @@
     "boxsize = 6 #10 #8 #6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "lagtime = 150\n",
-    "rootDirectory = '../../data/patchyProtein/first_passage_times/'"
+    "lagtime = 150 #150 #75 #75 #75\n",
+    "rootDirectory = '../../data/patchyProtein/first_passage_times/'\n",
+    "#rootDirectory = '../../data/testPatchyProtein/first_passage_times/'"
    ]
   },
   {
@@ -57,8 +58,9 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 5000\n",
+    "numTrajs = 600\n",
     "filename1 = rootDirectory + 'patchyProteinFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "#filename1 = rootDirectory + 'testNew7_ALL_PatchyProteinFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
     "with open(filename1) as file:\n",
     "    for line in file:\n",
@@ -67,7 +69,8 @@
     "        fpts.append(time)\n",
     "            \n",
     "# Normalize weights\n",
-    "weights = np.ones_like(fpts)/float(len(fpts))"
+    "weights = np.ones_like(fpts)/float(len(fpts))\n",
+    "max(fpts)"
    ]
   },
   {
@@ -77,9 +80,11 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 5000\n",
+    "numTrajs = 600\n",
     "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
+    "#filename = rootDirectory + 'testNew7_ALL_MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
+    "#str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "with open(filename) as file:\n",
     "    for line in file:\n",
@@ -88,7 +93,9 @@
     "        MSMRDfpts.append(time)\n",
     "            \n",
     "# Normalize weights\n",
-    "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))"
+    "#MSMRDfpts = [x for x in MSMRDfpts if x <= max(fpts)]\n",
+    "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))\n",
+    "max(MSMRDfpts)"
    ]
   },
   {
@@ -143,7 +150,9 @@
     "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
-    "hbins = range(0, 1000,30)\n",
+    "hbins = range(0, 2000,60)\n",
+    "#hbins = np.arange(0, 10,0.5)\n",
+    "\n",
     "\n",
     "# Plot A to unbound histogram\n",
     "ax1.hist(fpts, bins = hbins, alpha=a1, color=c1, weights = weights );\n",
@@ -153,10 +162,11 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow \\mathrm{Bound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(75, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(85, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
+    "ax1.text(750, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(850, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "ax1.set_xlim([0,1000])\n",
+    "ax1.set_xlim([0,2000])\n",
+    "#ax1.set_xlim([0,10])\n",
     "#ax1.set_ylim([0,0.18])\n",
     "\n",
     "#plt.savefig('toBound_FPTs.pdf', bbox_inches='tight')"
