Fixed minor annoying bug of eps error w/quatPartition getSectionNumber

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -176,11 +176,97 @@
    "source": [
     "# Write discrete trajectory to xyz file\n",
     "for i, dtraj in enumerate(dtrajs):\n",
-    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python_debug_test.xyz', 'w')\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python_debug.xyz', 'w')\n",
     "    for j in range(len(dtraj)):\n",
     "        datafile.write(str(dtraj[j]) + '\\n')\n",
     "    datafile.close()\n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old approach batches (for systems with small memory and for debugging)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load trajectories\n",
+    "trajs = []\n",
+    "fileNum1 = 258\n",
+    "fileNum2 = 259\n",
+    "for i in range(fileNum1, fileNum2):\n",
+    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
+    "    trajs.append(traj)    \n",
+    "    print(\"File \", i+1, \" of \", fileNum2, \" done.\", end=\"\\r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate discrete trajectories using msmrd2.trajectories.discrete\n",
+    "dtrajs = []\n",
+    "for i in range(fileNum2 - fileNum1):\n",
+    "    currentTraj = trajs[i]\n",
+    "    dtraj = discretizator.discretizeTrajectory(currentTraj)\n",
+    "    dtrajs.append(dtraj)\n",
+    "    if i%20 == 0:\n",
+    "        print(\"File \", i+1, \" of \", fileNum2 - fileNum1, \" done.\", end=\"\\r\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a specific part to debug\n",
+    "particles = trajs[0][2*200156:2*200157]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dummy particles to evaluate state\n",
+    "part1 = msmrd2.particle(0,0, particles[0][1:4], particles[0][4:8])\n",
+    "part2 = msmrd2.particle(0,0, particles[1][1:4], particles[1][4:8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate current state\n",
+    "discretizator.sampleDiscreteState(part1,part2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write discrete trajectory to xyz file\n",
+    "for i, dtraj in enumerate(dtrajs):\n",
+    "    datafile  = open(fnamebase + str(fileNum1 + i).zfill(4) + '_discrete_python_debug.xyz', 'w')\n",
+    "    for j in range(len(dtraj)):\n",
+    "        datafile.write(str(dtraj[j]) + '\\n')\n",
+    "    datafile.close()\n",
+    "    print(\"File \", i+1, \" of \", fileNum2 - fileNum1, \" done.\", end=\"\\r\")"
    ]
   },
   {
@@ -283,9 +369,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
