--- a/examples/generateMSM.ipynb
+++ b/examples/generateMSM.ipynb
@@ -301,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:msmrd-dev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-msmrd-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -315,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
