--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
