--- a/examples/tests/readH5.ipynb
+++ b/examples/tests/readH5.ipynb
@@ -21,7 +21,9 @@
     "#filename = '../../data/dimer/60strength/simDimer_0000_discrete_debug_test.h5'\n",
     "#filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0018.h5'\n",
     "#filename = '../../data/testPatchyProtein/benchmark/simPatchyProtein_0076_discrete.h5'\n",
-    "filename = '../../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/simPatchyProtein_0078.h5'\n",
+    "#filename = '../../data/testPatchyProtein/benchmark_t6E6_s25_new_equaldiff/simPatchyProtein_0078.h5'\n",
+    "filename = '../../data/patchyProtein/benchmark/simPatchyProtein_0258.h5'\n",
+    "\n",
     "\n",
     "f = h5py.File(filename, 'r')\n",
     "\n",
@@ -43,6 +45,15 @@
    "outputs": [],
    "source": [
     "a = np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[2*200150:2*200160]"
    ]
   },
   {
@@ -171,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
