Updated pProtein scripts

--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -99,8 +99,8 @@
    "source": [
     "# Define Patchy Protein potential\n",
     "sigma = 1.0\n",
-    "strength = 65\n",
-    "angularStrength = 2 \n",
+    "strength = 60 #65\n",
+    "angularStrength = 10 #2 \n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
