--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -150,7 +150,8 @@
     "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
-    "hbins = range(0, 2000,60)\n",
+    "hbins = range(0, 500,15)\n",
+    "#hbins = range(0, 2000,60)\n",
     "#hbins = np.arange(0, 10,0.5)\n",
     "\n",
     "\n",
@@ -162,10 +163,11 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow \\mathrm{Bound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(750, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(850, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
+    "ax1.text(250, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(300, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "ax1.set_xlim([0,2000])\n",
+    "ax1.set_xlim([0,500])\n",
+    "#ax1.set_xlim([0,2000])\n",
     "#ax1.set_xlim([0,10])\n",
     "#ax1.set_ylim([0,0.18])\n",
     "\n",
