--- a/examples/benchmark/plotPatchyProteinFPTs.ipynb
+++ b/examples/benchmark/plotPatchyProteinFPTs.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "# Load benchmark FPT data computed by script\n",
     "numTrajs = 600\n",
-    "filename1 = rootDirectory + 'patchyProteinFPTs_2bound2one_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filename1 = rootDirectory + 'patchyProteinFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "#filename1 = rootDirectory + 'testNew7_ALL_PatchyProteinFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
     "with open(filename1) as file:\n",
@@ -81,7 +81,7 @@
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
     "numTrajs = 600\n",
-    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2bound2one_trajs' + \\\n",
+    "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "#filename = rootDirectory + 'testNew7_ALL_MSMRDpatchyProteinFPTs_2bound_trajs' + \\\n",
     "#str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
@@ -150,8 +150,8 @@
     "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
-    "#hbins = range(0, 500,15)\n",
-    "hbins = range(0, 2000,60)\n",
+    "hbins = range(0, 500,15)\n",
+    "#hbins = range(0, 2000,60)\n",
     "#hbins = np.arange(0, 10,0.5)\n",
     "\n",
     "\n",
@@ -163,15 +163,15 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow \\mathrm{Bound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(250, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(300, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
+    "ax1.text(100, 0.15, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(120, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "#ax1.set_xlim([0,500])\n",
-    "ax1.set_xlim([0,2000])\n",
+    "ax1.set_xlim([0,500])\n",
+    "#ax1.set_xlim([0,2000])\n",
     "#ax1.set_xlim([0,10])\n",
     "#ax1.set_ylim([0,0.18])\n",
     "\n",
-    "#plt.savefig('toBound_FPTs.pdf', bbox_inches='tight')"
+    "plt.savefig('toBound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -188,13 +188,13 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 1000\n",
+    "numTrajs = 5000\n",
     "filename = rootDirectory + 'patchyProteinFPTs_2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts2unbound = []\n",
     "with open(filename) as file:\n",
     "    \n",
     "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
+    "        state, dummy1, dummy2, dummy3, dummy4, dummy5, time = line.split(\" \")\n",
     "        time = float(time)\n",
     "        fpts2unbound.append(time)\n",
     "        \n",
@@ -209,13 +209,13 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 1000\n",
+    "numTrajs = 5000\n",
     "filename = rootDirectory + 'MSMRDpatchyProteinFPTs_2unbound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts2unbound = []\n",
     "with open(filename) as file:\n",
     "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
+    "        state, dummy1, dummy2, dummy3, dummy4, dummy5, time = line.split(\" \")\n",
     "        time = float(time)\n",
     "        MSMRDfpts2unbound.append(time)\n",
     "        \n",
@@ -267,7 +267,8 @@
     "fsize = 16\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
-    "hbins = np.arange(0, 15, 0.5)\n",
+    "#hbins = np.arange(0, 15, 0.5)\n",
+    "hbins = np.arange(0, 10, 0.33333333)\n",
     "#hbins = np.arange(0, 20, 0.66666666)\n",
     "\n",
     "# Set outer common axes titles\n",
@@ -285,15 +286,17 @@
     "ax1.hist(MSMRDfpts2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
     "         facecolor='None', weights = weightsMSMRD2, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$ \\mathrm{Bound} \\rightarrow \\mathrm{Unbound}$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(3.4, 0.12, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt2unbound, fpt2unboundstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(3.5, 0.1, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt2unbound, MSMRDfpt2unboundstd), \n",
+    "ax1.text(3.2, 0.105, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt2unbound, fpt2unboundstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(3.4, 0.09, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt2unbound, MSMRDfpt2unboundstd), \n",
     "         fontsize=fsize, color=c2)\n",
-    "ax1.set_xlim([0,15])\n",
-    "ax1.set_ylim([0,0.2])\n",
+    "#ax1.set_xlim([0,15])\n",
+    "#ax1.set_ylim([0,0.2])\n",
+    "ax1.set_xlim([0,10])\n",
+    "ax1.set_ylim([0,0.18])\n",
     "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
     "\n",
     "\n",
-    "#plt.savefig('toUnbound_FPTs.pdf', bbox_inches='tight')"
+    "plt.savefig('toUnbound_patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -317,25 +320,25 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 10000\n",
-    "filenameA = rootDirectory + 'patchyDimerFPTs_A2B_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'patchyDimerFPTs_B2A_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "fptsA2B = []\n",
-    "fptsB2A = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsA2B.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fptsB2A.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsA2B = np.ones_like(fptsA2B)/float(len(fptsA2B))\n",
-    "weightsB2A = np.ones_like(fptsB2A)/float(len(fptsB2A))"
+    "numTrajs = 1000\n",
+    "boundStates = [1,2,3,4,5,6]\n",
+    "fptsB2B = np.zeros([len(boundStates),len(boundStates),numTrajs])\n",
+    "weightsB2B = np.zeros([len(boundStates),len(boundStates),numTrajs])\n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        if i != j:\n",
+    "            filenameB2B = rootDirectory + 'patchyProteinFPTs_' + str(i) + 'to' + str(j) \\\n",
+    "            + '_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "            with open(filenameB2B) as file:\n",
+    "                k=0\n",
+    "                for line in file:\n",
+    "                    initState, endState, time = line.split(\" \")\n",
+    "                    time = float(time)\n",
+    "                    fptsB2B[i-1,j-1,k] = time\n",
+    "                    k += 1\n",
+    "\n",
+    "            # Normalizing weights\n",
+    "            weightsB2B[i-1,j-1] = np.ones_like(fptsB2B[i-1,j-1])/float(len(fptsB2B[i-1,j-1]))"
    ]
   },
   {
@@ -345,27 +348,24 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 10000\n",
-    "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2B_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2A_trajs' + \\\n",
-    "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA2B = []\n",
-    "MSMRDfptsB2A = []\n",
-    "with open(filenameA) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsA2B.append(time)\n",
-    "with open(filenameB) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        MSMRDfptsB2A.append(time)\n",
-    "        \n",
-    "# Normalizing weights\n",
-    "weightsA2BMSMRD = np.ones_like(MSMRDfptsA2B)/float(len(MSMRDfptsA2B))\n",
-    "weightsB2AMSMRD = np.ones_like(MSMRDfptsB2A)/float(len(MSMRDfptsB2A))"
+    "# Load benchmark FPT data computed by script\n",
+    "MSMRDfptsB2B = np.zeros([len(boundStates),len(boundStates),numTrajs])\n",
+    "MSMRDweightsB2B = np.zeros([len(boundStates),len(boundStates),numTrajs])\n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        if i != j:\n",
+    "            filenameB2B = rootDirectory + 'MSMRDpatchyProteinFPTs_' + str(i) + 'to' + str(j) \\\n",
+    "            + '_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "            with open(filenameB2B) as file:\n",
+    "                k=0\n",
+    "                for line in file:\n",
+    "                    initState, endState, time = line.split(\" \")\n",
+    "                    time = float(time)\n",
+    "                    MSMRDfptsB2B[i-1,j-1,k] = time\n",
+    "                    k += 1\n",
+    "\n",
+    "            # Normalizing weights\n",
+    "            MSMRDweightsB2B[i-1,j-1] = np.ones_like(MSMRDfptsB2B[i-1,j-1])/float(len(MSMRDfptsB2B[i-1,j-1]))"
    ]
   },
   {
@@ -383,14 +383,75 @@
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
     "numBootsrapSamples = 2000\n",
-    "mfptA2B, fptA2Bstd = analysisTools.bootstrapping(fptsA2B, numBootsrapSamples)\n",
-    "mfptB2A, fptB2Astd = analysisTools.bootstrapping(fptsB2A, numBootsrapSamples)\n",
-    "print(\"Bootstrapping mean and std (A2B): \", mfptA2B, fptA2Bstd)\n",
-    "print(\"Bootstrapping mean and std (B2A): \", mfptB2A, fptB2Astd)\n",
-    "MSMRDmfptA2B, MSMRDfptA2Bstd = analysisTools.bootstrapping(MSMRDfptsA2B, numBootsrapSamples)\n",
-    "MSMRDmfptB2A, MSMRDfptB2Astd = analysisTools.bootstrapping(MSMRDfptsB2A, numBootsrapSamples)\n",
-    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2B, MSMRDfptA2Bstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2A, MSMRDfptB2Astd)"
+    "mfptsB2B = np.zeros([len(boundStates),len(boundStates)])\n",
+    "MSMRDmfptsB2B = np.zeros([len(boundStates),len(boundStates)])\n",
+    "fptB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "MSMRDfptB2Bstd = np.zeros([len(boundStates),len(boundStates)])\n",
+    "mfptsB2BDiff = np.zeros([len(boundStates),len(boundStates)])\n",
+    "print(\"Begins boostrapping:\") \n",
+    "print(\"Transition     MFPT       stddev     MSMRD-MFPT  MSMRD-stddev    Difference\")\n",
+    "for i in boundStates:\n",
+    "    for j in boundStates:\n",
+    "        if i != j:\n",
+    "            mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(fptsB2B[i-1,j-1], numBootsrapSamples)\n",
+    "            #MSMRDmfptsB2B[i-1,j-1], MSMRDfptB2Bstd[i-1,j-1] = analysisTools.bootstrapping(MSMRDfptsB2B[i-1,j-1], numBootsrapSamples)\n",
+    "            mfptsB2BDiff[i-1,j-1] = np.abs(mfptsB2B[i-1,j-1] - MSMRDmfptsB2B[i-1,j-1])\n",
+    "            print(str(i) + \" to \" + str(j) + \":    {:10.4f} {:10.2f} {:10.4f} {:10.2f} {:18.4f}\"\n",
+    "                  .format(mfptsB2B[i-1,j-1], fptB2Bstd[i-1,j-1], MSMRDmfptsB2B[i-1,j-1], \n",
+    "                          MSMRDfptB2Bstd[i-1,j-1], mfptsB2BDiff[i-1,j-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grid plot for histograms\n",
+    "fig, ax = plt.subplots(nrows=6, ncols=5, sharex=True, sharey=True, figsize=(14,10))\n",
+    "fig.subplots_adjust(hspace=0, wspace=0)\n",
+    "fsize = 20\n",
+    "fsize2 = 12\n",
+    "plt.rcParams['xtick.labelsize']=fsize\n",
+    "plt.rcParams['ytick.labelsize']=fsize\n",
+    "#hbins = np.arange(0, 500, 15)\n",
+    "hbins = np.arange(0, 600, 18)\n",
+    "# Set outer common axes titles\n",
+    "ax0 = fig.add_subplot(111, frameon=False)\n",
+    "ax0.set_xlabel(r'$\\mathrm{time}$', fontsize=fsize + 4)\n",
+    "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
+    "ax0.set_xticks([0])\n",
+    "ax0.set_yticks([0])\n",
+    "# Loop over plotting grid\n",
+    "for i in range(6):\n",
+    "    for j in range(5):\n",
+    "        if j < i:\n",
+    "            jj = j\n",
+    "        else:\n",
+    "            jj = j+1\n",
+    "        ax[i,j].hist(fptsB2B[i,jj], bins = hbins, alpha=a1, color=c1, weights = weightsB2B[i,jj]);\n",
+    "        ax[i,j].hist(fptsB2B[i,jj], bins = hbins, alpha=a2, edgecolor=c1, lw=1, histtype='step',\n",
+    "         facecolor='None', weights = weightsB2B[i,jj], label = r'$\\mathrm{Benchmark}$');\n",
+    "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a1, color=c2, weights = MSMRDweightsB2B[i,jj]);\n",
+    "        ax[i,j].hist(MSMRDfptsB2B[i,jj], bins = hbins, alpha=a2, edgecolor=c2, lw=1, histtype='step',\n",
+    "         facecolor='None', weights = MSMRDweightsB2B[i,jj], label =r'$\\mathrm{MSM/RD}$');\n",
+    "        ax[i,j].text(350,0.1, r'{:d} to {:d}'.format(i+1, jj+1), fontsize=fsize, family=\"serif\")\n",
+    "        ax[i,j].text(200,0.08, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptsB2B[i,jj] , fptB2Bstd[i,jj]), \n",
+    "                     fontsize=fsize2, color=c1)\n",
+    "        ax[i,j].text(220,0.06, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptsB2B[i,jj], MSMRDfptB2Bstd[i,jj]), \n",
+    "                     fontsize=fsize2, color=c2)\n",
+    "        # Add legend\n",
+    "        if i == 0 and j == 4:\n",
+    "            ax[i,j].legend(fontsize=fsize, fancybox=True, framealpha=1.0, \n",
+    "                           bbox_to_anchor=(1.4, 1.55))\n",
+    "        # Set plotlimits\n",
+    "        ax[i,j].set_xlim([0,600])\n",
+    "        #ax[i,j].set_ylim([0,0.23])\n",
+    "        ax[i,j].set_ylim([0,0.15])\n",
+    "        #ax[i,j].set_xticks(np.arange(0, 500, step=300));\n",
+    "        #ax[i,j].set_yticks(np.arange(-0.1, 0.3, step=0.2));\n",
+    "        \n",
+    "#plt.savefig('bound2bound__patchyProtein_FPTs.pdf', bbox_inches='tight')"
    ]
   },
   {
